--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.3.4",
+    "react-redux": "^7.2.6",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
