cart item update

--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.3.4",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "reactstrap": "^9.0.1",
+    "remixicon": "^2.5.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
