--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^16.13.1",
+    "react-paginate": "^8.1.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
