--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
-    "react": "^16.13.1",
+    "install": "^0.13.0",
+    "npm": "^9.8.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
+    "react-is": "^18.2.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.0.1",
+    "redux": "^4.2.1",
     "remixicon": "^2.5.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
@@ -43,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "cross-env": "^7.0.3"
   }
 }
